spacing fix

--- a/src/app/styles/alerts.scss
+++ b/src/app/styles/alerts.scss
@@ -1,9 +1,13 @@
+@import "variables";
+
 .alert-default {
   background-color: #f5f5f5;
 }
 
 .alert {
-  .pull-right {
-    line-height: 1.1;
+  @media (max-width: $screen-xs-max) {
+    .pull-right {
+      line-height: 1.1;
+    }
   }
 }
